// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseList with empty message 1`] = `
<div
  className="expense-item"
>
  <div
    className="expense-list-header"
  >
    <div
      className="show-mobile"
    >
      expenses
    </div>
    <div
      className="show-desktop"
    >
      expense
    </div>
    <div
      className="show-desktop"
    >
      amount
    </div>
    <div
      className="show-desktop"
    >
      date
    </div>
  </div>
  <p
    className="noExpense"
  >
    No expenses
  </p>
</div>
`;

exports[`should render ExpenseList with expenses 1`] = `
<div
  className="expense-item"
>
  <div
    className="expense-list-header"
  >
    <div
      className="show-mobile"
    >
      expenses
    </div>
    <div
      className="show-desktop"
    >
      expense
    </div>
    <div
      className="show-desktop"
    >
      amount
    </div>
    <div
      className="show-desktop"
    >
      date
    </div>
  </div>
  <ExpenseListItem
    amount={195}
    createdAt={0}
    description="Gum"
    id="1"
    note=""
  />
  <ExpenseListItem
    amount={109500}
    createdAt={-345600000}
    description="Rent"
    id="2"
    note=""
  />
  <ExpenseListItem
    amount={4500}
    createdAt={345600000}
    description="Credit Card"
    id="3"
    note=""
  />
</div>
`;
